# APIKL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
APIKL/: APIKL.py  Found.py  __init__.py
src/APIKeyL/: APIKeyL.py  __init__.py  setup.py
tests/: test.py
tests/java/testDirectory/: database.xml  database1.xml
