[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "APIKeyL"
version = "0.0.1"
authors = [
 { name="vitaly_kalinsky", email="kalinskyvii@gmail.com" },
]
description = "This module helps to define API keys"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
   "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/VitalyKalinsky/APIKeyL"
Issues = ""